--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,11 +15,12 @@
     <nav>
       <div class="nav-wrapper">
         <ul>
-          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;SongCollector</a></li>
+          <li><a href="{% url 'home' %}" class="left brand-logo">&nbsp;&nbsp;SongCollector</a></li>
         </ul>
         <ul class="right">
-          <li><a href="/about">About</a></li>
-          <li><a href="/songs">View All My Songs</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'songs_create' %}">Add a Song</a></li>
+          <li><a href="{% url 'index' %}">View All My Songs</a></li>
         </ul>
       </div>
     </nav>
