--- a/main_app/templates/songs/index.html
+++ b/main_app/templates/songs/index.html
@@ -5,12 +5,14 @@
 
 {% for song in songs %}
   <div class="card">
-    <div class="card-content">
-      <span class="card-title">{{ song.song }}</span>
-      <p>Name: {{ song.name }}</p>
-      <p>Release: {{ song.released }}</p>
-      <p>Description: {{ song.description }}</p>
-  </div>
+    <a href="{% url 'detail' song.id %}">
+      <div class="card-content">
+        <span class="card-title">{{ song.song }}</span>
+        <p>Name: {{ song.name }}</p>
+        <p>Release: {{ song.released }}</p>
+        <p>Description: {{ song.description }}</p>
+      </div>
+    </a>
 {% endfor %}
 
 {% endblock %}
