--- a/main_app/templates/songs/index.html
+++ b/main_app/templates/songs/index.html
@@ -3,7 +3,7 @@
 
 <h1>Song List</h1>
 
-{% for song in songs %}
+{% for song in object_list %}
   <div class="card">
     <a href="{% url 'detail' song.id %}">
       <div class="card-content">
